openshift/cars-frontend-o.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: cars-frontend
    name: cars-frontend
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: cars-frontend
      deploymentconfig: cars-frontend
    strategy:
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          app: cars-frontend
          deploymentconfig: cars-frontend
      spec:
        containers:
        - image: " "
          imagePullPolicy: Always
          name: cars-frontend
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - imageChangeParams:
        automatic: false
        containerNames:
        - cars-frontend
        from:
          kind: ImageStreamTag
          name: cars-frontend:latest
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: cars-frontend
    name: cars-frontend
  spec:
    port:
      targetPort: 8080-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: cars-frontend
      weight: 100
    wildcardPolicy: None
  status:
    ingress: null
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: cars-frontend
    name: cars-frontend
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: cars-frontend
      deploymentconfig: cars-frontend
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
